force-app/main/default/objects/Campaign/fields/Ticket_Category__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Category__c</fullName>
    <label>Ticket Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category A</fullName>
            </value>
            <value>
                <fullName>Corporate Box</fullName>
            </value>
            <value>
                <fullName>Diamond Lounge</fullName>
            </value>
            <value>
                <fullName>General Admin</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Suite</fullName>
            </value>
            <value>
                <fullName>General Admission</fullName>
            </value>
            <value>
                <fullName>Corporate Hospitality</fullName>
            </value>
            <value>
                <fullName>Suite - shared</fullName>
            </value>
            <value>
                <fullName>Table</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Open Box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>