force-app/main/default/objects/Campaign/fields/Ticket_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Delivery__c</fullName>
    <label>Ticket Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-ticket</fullName>
            </value>
            <value>
                <fullName>Paper ticket</fullName>
            </value>
            <value>
                <fullName>Mobile ticket</fullName>
            </value>
            <value>
                <fullName>Name at door</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>