force-app/main/default/objects/Campaign/fields/Tickets_Available__c.field-meta.xml
<CustomField>
    <fullName>Tickets_Available__c</fullName>
    <label>Total Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>