force-app/main/default/objects/Campaign/fields/Total_Booking_Incremental__c.field-meta.xml
<CustomField>
    <fullName>Total_Booking_Incremental__c</fullName>
    <inlineHelpText>Sum of all the Booking Incremental Values on the Child Campaigns</inlineHelpText>
    <label>Total Booking Incremental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>