force-app/main/default/objects/Campaign/fields/Total_No_Of_Tickets_LY__c.field-meta.xml
<CustomField>
    <fullName>Total_No_Of_Tickets_LY__c</fullName>
    <label>Total No.Of.Tickets (LY)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>