force-app/main/default/objects/Campaign/fields/Total_Revenue_Incremental__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_Incremental__c</fullName>
    <inlineHelpText>Sum of all the Revenue Incremental Values on the Child Campaigns</inlineHelpText>
    <label>Total Revenue Incremental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>