force-app/main/default/objects/Campaign/fields/Tour_Company__c.field-meta.xml
<CustomField>
    <fullName>Tour_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tour Company</label>
    <type>Checkbox</type>
</CustomField>