force-app/main/default/objects/Campaign/fields/Uplift_Value__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Value__c</fullName>
    <description>Loyalty commercial field</description>
    <label>Uplift Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>