force-app/main/default/objects/Campaign/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Venue</label>
    <type>TextArea</type>
</CustomField>