force-app/main/default/objects/Campaign/fields/What_s_the_Message__c.field-meta.xml
<CustomField>
    <fullName>What_s_the_Message__c</fullName>
    <description>What&apos;s the Message?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Do you have a proposed key message for the campaign?</inlineHelpText>
    <label>What&apos;s the Message?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>