force-app/main/default/objects/Campaign/recordTypes/Business_and_Government.recordType-meta.xml
<RecordType>
    <fullName>Business_and_Government</fullName>
    <active>true</active>
    <label>Business and Government</label>
</RecordType>