force-app/main/default/objects/Campaign/recordTypes/Events.recordType-meta.xml
<RecordType>
    <fullName>Events</fullName>
    <active>true</active>
    <description>Marketing Events/ Invites</description>
    <label>Events</label>
</RecordType>