force-app/main/default/objects/Campaign/recordTypes/Freight.recordType-meta.xml
<RecordType>
    <fullName>Freight</fullName>
    <active>true</active>
    <description>To be used for Freight Specific Sales activities.</description>
    <label>Freight</label>
</RecordType>