force-app/main/default/objects/Campaign/recordTypes/Learning_Development.recordType-meta.xml
<RecordType>
    <fullName>Learning_Development</fullName>
    <active>true</active>
    <description>Campaigns for L&amp;D for Agency Accounts</description>
    <label>Learning &amp; Development</label>
</RecordType>