force-app/main/default/objects/Campaign/recordTypes/Loyalty_Commercial.recordType-meta.xml
<RecordType>
    <fullName>Loyalty_Commercial</fullName>
    <active>true</active>
    <description>Campaign used for Loyalty Commercial</description>
    <label>Loyalty Commercial</label>
</RecordType>