force-app/main/default/objects/Campaign/recordTypes/Marketing_Child.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Child</fullName>
    <active>true</active>
    <label>Marketing - Child</label>
</RecordType>