force-app/main/default/objects/Campaign/recordTypes/Marketing_Parent.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Parent</fullName>
    <active>true</active>
    <label>Marketing - Parent</label>
</RecordType>