force-app/main/default/objects/Campaign/recordTypes/SME_Campaigns.recordType-meta.xml
<RecordType>
    <fullName>SME_Campaigns</fullName>
    <active>true</active>
    <label>SME Campaigns</label>
</RecordType>