force-app/main/default/objects/Campaign/recordTypes/Subscription.recordType-meta.xml
<RecordType>
    <fullName>Subscription</fullName>
    <active>true</active>
    <description>Used to upload the Campaign Members from the list provided by QIS. This is a list of contacts for which the subscription/news-update were sent.</description>
    <label>Subscription</label>
</RecordType>