force-app/main/default/objects/Campaign/recordTypes/Travel_Fund.recordType-meta.xml
<RecordType>
    <fullName>Travel_Fund</fullName>
    <active>true</active>
    <description>Campains for Travel Fund associated to Agency Accounts</description>
    <label>Travel Fund</label>
</RecordType>