force-app/main/default/objects/Campaign/validationRules/Marketing_Child_Mandatory_Field_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Marketing_Child_Mandatory_Field_Complete</fullName>
    <active>true</active>
    <description>Marketing Child Mandatory fields for status Completed based on the CurrencyIsoCode
Fields:
Actual Cost in Campaign
Actual Revenue in Campaign</description>
    <errorConditionFormula>AND( 
$RecordType.DeveloperName = &quot;Marketing_Child&quot;, 
OR(ISPICKVAL( CurrencyIsoCode, &quot;KHR&quot;), 
ISPICKVAL( CurrencyIsoCode, &quot;IDR&quot;), 
ISPICKVAL( CurrencyIsoCode, &quot;KRW&quot;), 
ISPICKVAL( CurrencyIsoCode, &quot;MYR&quot;), 
ISPICKVAL( CurrencyIsoCode, &quot;PGK&quot;), 
ISPICKVAL( CurrencyIsoCode, &quot;PHP&quot;), 
ISPICKVAL( CurrencyIsoCode, &quot;SBD&quot;), 
ISPICKVAL( CurrencyIsoCode, &quot;BHD&quot;), 
ISPICKVAL( CurrencyIsoCode, &quot;VND&quot;)), 
ISPICKVAL(Status,&quot;Completed&quot;),
OR( 
ISBLANK ( ActualCost ),
ActualCost = 0),
OR(
ISBLANK ( Actual_Revenue_in_Campaign__c )
)
)</errorConditionFormula>
    <errorMessage>Please either add your Actual Cost in your Campaign Expenses list or fill up your Actual Revenue in Campaign</errorMessage>
</ValidationRule>