force-app/main/default/objects/Campaign/listViews/All_Learning_Development_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Learning_Development_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Learning_Development</value>
    </filters>
    <label>All Learning &amp; Development Campaigns</label>
    <sharedTo></sharedTo>
</ListView>