force-app/main/default/objects/Campaign/listViews/AP_Campaigns.listView-meta.xml
<ListView>
    <fullName>AP_Campaigns</fullName>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>LookupAccount__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>startsWith</operation>
        <value>FY19</value>
    </filters>
    <label>AP Campaigns</label>
    <sharedTo></sharedTo>
</ListView>