force-app/main/default/objects/Campaign/listViews/Archived_All_Asia_Budgets.listView-meta.xml
<ListView>
    <fullName>Archived_All_Asia_Budgets</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Total_Campaign_Budgeted_Cost__c</columns>
    <columns>TOT_BUDGETED_COST</columns>
    <columns>TOT_ACTUAL_COST</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Marketing_Parent</value>
    </filters>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>equals</operation>
        <value>LAST_FISCAL_YEAR</value>
    </filters>
    <filters>
        <field>Created_By_Team__c</field>
        <operation>startsWith</operation>
        <value>QF-INT-Sales-Asia,QF-Sales &amp; Distribution-GSA</value>
    </filters>
    <label>Archived - All Asia Budgets</label>
</ListView>