force-app/main/default/objects/Campaign/listViews/Freight_Shakedown_Process.listView-meta.xml
<ListView>
    <fullName>Freight_Shakedown_Process</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Mine</filterScope>
    <label>Freight Shakedown Process</label>
    <sharedTo>
        <role>QF_Freight_Executive</role>
    </sharedTo>
</ListView>