force-app/main/default/objects/Campaign/listViews/HKG_Shakedown_Process.listView-meta.xml
<ListView>
    <fullName>HKG_Shakedown_Process</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Shakedown</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>startsWith</operation>
        <value>BNEHKG,SYDHKG,MELHKG</value>
    </filters>
    <label>HKG - Shakedown Process</label>
    <sharedTo></sharedTo>
</ListView>