force-app/main/default/objects/Campaign/listViews/Japan_Campaigns.listView-meta.xml
<ListView>
    <fullName>Japan_Campaigns</fullName>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Marketing_Child</value>
    </filters>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>equals</operation>
        <value>THIS_FISCAL_YEAR</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Japan</value>
    </filters>
    <label>Japan Campaigns</label>
</ListView>