force-app/main/default/objects/Campaign/listViews/Korea_Campaigns.listView-meta.xml
<ListView>
    <fullName>Korea_Campaigns</fullName>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Marketing_Child</value>
    </filters>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>equals</operation>
        <value>THIS_FISCAL_YEAR</value>
    </filters>
    <filters>
        <field>Created_By_Team__c</field>
        <operation>startsWith</operation>
        <value>QF-INT-Sales-Asia,QF-Sales &amp; Distribution-GSA</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>Korea</value>
    </filters>
    <label>Korea Campaigns</label>
</ListView>