force-app/main/default/objects/Campaign/listViews/Loyalty_Commercial.listView-meta.xml
<ListView>
    <fullName>Loyalty_Commercial</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Loyalty_Commercial</value>
    </filters>
    <label>Loyalty Commercial</label>
    <sharedTo></sharedTo>
</ListView>